test/sema/typeck/method/unknown-method-missing-args.out
error: Call should have 1 arguments but got only 0.
--> unknown-method-missing-args.dora:6:16
 | }
 | 
 | fn f(x: Foo) { x.bar(); }
                  ~~~~~~~
 | 
1 error found.
