test/sema/typeck/method/unknown-method-missing-args.dora
class Foo
impl Foo {
    fn bar(a: Int32) { }
}

fn f(x: Foo) { x.bar(); }
